cluster/sandbox/harbor/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  hostnames:
    - harbor.squid-ink.us
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nginx-public
      namespace: nginx-gateway-fabric-public
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/
      backendRefs:
        - group: ""
          kind: Service
          name: harbor-core
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /service/
      backendRefs:
        - group: ""
          kind: Service
          name: harbor-core
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /v2/
      backendRefs:
        - group: ""
          kind: Service
          name: harbor-core
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /chartrepo/
      backendRefs:
        - group: ""
          kind: Service
          name: harbor-core
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /c/
      backendRefs:
        - group: ""
          kind: Service
          name: harbor-core
          port: 80
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: harbor-portal
          port: 80
          weight: 1
